final commits for resubmission of 0926

--- a/usability-study/heuristic-evaluation.tex
+++ b/usability-study/heuristic-evaluation.tex
@@ -18,140 +18,133 @@ In this heuristic evaluation, I mention the main three different types of custom
 \end{enumerate}
 
 In terms of the five usability metrics, I define \textit{learnability} as the time to learn, \textit{efficiency} as speed of performance, \textit{errors} as rate of errors, \textit{memorability} as retention over time, and \textit{satisfaction} as subjective satisfaction.
-\pagebreak
 
-\section{Amazon}
+Also, in general, the evaluations of eBay and Shopzilla will be slightly shorter than Amazon's. I introduce a few recurring terms and ideas in Amazon's evaluation and in order to be less redundant, I omit some of these details where it is seen fit.
 
-\subsection{Mental model}
+\section{Mental models}
 
-Amazon's mental mondel is quite clear from the moment you land on their homepage. In order to illustrate the designer's mental models, I will focus on just the homepage. Amazon's designers carry a few mental model for the types of customers that they are serving. Each of the types of customers can also be logged in or not, and Amazon accounted for these types in their design.
+	\subsection{Amazon}
 
-The \textbf{search bar} is there if the customer has a specific product in mind to buy. This allows the customer for a very refined search of what they are purchasing. This works extremely well because they designer has the mental model that they customer can simply type exactly what they are searching for, and this allows the customer to do so. There even is a drop-down on the left of the input field to search within a specific category. The search terms also tries to autocomplete the search so the customer can type less. A customer does not need to be logged in for this to work as Amazon has designed it.
+	Amazon's mental model is quite clear from the moment you land on their homepage. In order to illustrate the designer's mental models, I will focus on just the homepage. Amazon's designers carry a few mental models for the types of customers that they are serving. Each of the types of customers can also be logged in or not, and Amazon accounted for this in their design.
 
-The \textit{Shop by \textbf{Department}} drop-down is there for the customers who want to shop but do not know what they want to buy. Their main cateogies are listed here with the most popular subcategories for those given categories. Yet, at the bottom of this drop-down, one can see a link to the \textit{Full Store Directory}. Thanks to both of these options, a customer who does not know what they want to buy has no problem figuring this out. Similarly to the search bar, a customer does not need to be logged in for this to be functional.
+	The \textbf{search bar} is there if the customer has a specific product in mind to buy. This allows the customer for a very refined search of what they are purchasing. This works extremely well because they designer has the mental model that they customer can simply type exactly what they are searching for, and this allows the customer to do so. There even is a drop-down on the left of the input field to search within a specific category. The search terms also tries to autocomplete the search so the customer can type less. A customer does not need to be logged in for this to work as Amazon has designed it.
 
-The \textbf{horizontal lists} have slightly different functionality depending on if a customer is logged in or not. In either case, many horizontally lists show up below the drop-down on the left which are mainly geared towards a customer who does not have a clear idea of what they exactly want to buy. If the customer is not logged in, the lists can be \textit{Included with Prime Membership at No Additional Cost}, \textit{What Other Customers Are Looking At Right Now}, etc. If a customer is logged in the lists change to \textit{More Items to Consider}, \textit{Related to Items You've Viewed}, \textit{New For You}, and \textit{Inspired by Your Shopping Trends}. They usually also include a list that begins with the words \textit{Reccomendations for You in} which is followed by a category of products that you might have been looking at recently. The horizontal lists can help a customer make a choice for any occasion, regardless if they are looged in or not.
+	The \textit{Shop by \textbf{Department}} drop-down is there for the customers who want to shop but do not know what they want to buy. Their main categories are listed here with the most popular subcategories for those given categories. Yet, at the bottom of this drop-down, one can see a link to the \textit{Full Store Directory}. Thanks to both of these options, a customer who does not know what they want to buy has no problem figuring this out. Similarly to the search bar, a customer does not need to be logged in for this to be functional.
 
-The \textbf{search bar}, \textit{Shop by \textbf{Department}} drop-down, and \textbf{horizontal lists} account for all the types of customers that enter Amazon's site. The mental models of the designers work incrdibly well because they have figured out a way to approach every customer.
+	The \textbf{horizontal lists} have slightly different functionality depending on if a customer is logged in or not. In either case, many horizontally lists show up below the drop-down on the left which are mainly geared towards a customer who does not have a clear idea of what they exactly want to buy. If the customer is not logged in, the lists can be \textit{Included with Prime Membership at No Additional Cost}, \textit{What Other Customers Are Looking At Right Now}, etc. If a customer is logged in the lists change to \textit{More Items to Consider}, \textit{Related to Items You've Viewed}, \textit{New For You}, and \textit{Inspired by Your Shopping Trends}. They usually also include a list that begins with the words \textit{Recommendations for You in} which is followed by a category of products that you might have been looking at recently. The horizontal lists can help a customer make a choice for any occasion, regardless if they are logged in or not.
 
-\subsection{Five key usability metrics}
+	The \textbf{search bar}, \textit{Shop by \textbf{Department}} drop-down, and \textbf{horizontal lists} account for all the types of customers that enter Amazon's site. The mental models of the designers work incredibly well because they have figured out a way to approach every customer.
 
-\subsubsection{Learnability}
-In terms of the shopping process, Amazon's site is designed well because it takes little to no time at all to learn how to navigate it. The layout remains consistent throughout the every step of the way. As I mentioned previously, their website appeals to all types of customers which makes it very learnable. Through out every step of the way, the action required to get to the next step of the process is always on the right of the web page. The shopping process is very learnable.
+	\subsection{eBay}
 
-Yet, Amazon's account page takes some more time to learn. They inlcude many links of just text and options that most common shoppers do not use like \textit{Manage Bulk Gift Card Orders} and \textit{Manage Textbook Rentals}. It takes time to simply get familar with the layout.
+	eBay's mental models have many similarities to Amazon. Although their product are sold and bought by only users, their goal is to approach every type of customer that can navigate their website just like Amazon.
 
-All in all, their interface is fairly learnable and takes not too much time to learn.
+	The \textbf{search bar} is there if the customer has a specific agenda on their mind when they arrive at eBay. An autocompleting search bar allows the site to guess what the user wants to buy. Its purpose is clear and it fulfills its purpose quite nicely.
 
-\subsubsection{Efficiency}
-Amazon's checkout process is quite error-less. In order to buy a product, Amazon offers a few options for completeing a purchase for its customers. 
+	eBay utilizes a similar concept as Amazon's horizontal lists. They also have lists as one navigates their main site further down, but these lists are created by users of the website. Examples include \textit{Namaste}, a list including all types of yoga products, \textit{Mellow Yellow}, a list geared towards yellow products, and \textit{Je T'aime... Moi Non Plus}, a Jane Birkin inspired list. These are geared for the people on eBay's site that are simply browsing with no clear intention of what they might want to buy. eBay also includes \textit{My Feed} for personal recommendations for new products. These options clearly interact well with user's whose mental models are geared towards having eBay help them decide what they want to purchase. These personalized lists are slightly differently implemented than Amazon's, yet ultimately serve the same purpose in a not so different way.
 
-First, they allow the customer to add their product to their shopping cart. This process is efficient because, as mentioned previously, each subsequent step is always located in the same area.
+	eBay realizes the power of simple interfaces. At the bottom of the page, they include a link to \textit{Legal \& More}. This section pops up with a ton of options that they deem to be less used, like \textit{Security center}, \textit{Business sellers}, etc. They are keeping more content that the user is inclined to use in their experience right where they need it. For example, whenever you click on your name at the top of the page, a drop-down comes down with some options like \textit{Purchases} and \textit{Recently Viewed}. Amazon accomplishes the same with more dropdowns and more options for each drop-down. They include many options that the user simply wouldn't use. This simplification of what the user needs to access their account option is a move that really facilitates communication between the designer's mental model and the user's mental model.
 
-Second, they also allow customers to buy with 1-Click\textregistered\hspace{2 mm}(I didn't want them to get mad). This is quite incredibly efficient. It holds true to its name and really allows for a single click to purchase a product. Before clicking buy, it allows for the user to choose which address they ship to from that are of the screen.
+	In terms of the users that are considering buying something, yet have not, eBay includes ways similar to Amazon's ways of keeping this information stored for the user to. This is where Amazon's \textit{Wish lists} and eBay's \textit{Lists} come into play. These 
 
-Overall, the whole process of using their website is efficient.
+	Overall, eBay's site approaches all types of mental models well and does so in a simplistic fashion.
 
-\subsubsection{Errors}
-A potential error that may arise during shopping using the 1-Click\textregistered\hspace{2 mm}method, is that each location saved in a user's account can have a default payment method. If a user forgets which payment method they have chosen for a given location to ship to, this can charge a different payment method than they might have expected. Besides this, their website is error-free.
+	\subsection{Shopzilla}
 
-\subsubsection{Memorability}
-In terms of memorability, Amazon's site utilizes the idea of keeping the link or button that completes an action on the right side of the page. This make it memorable because any user can expect to see similar actions on that side fo the page. Overall, Amazon's site is memorable.
+	Looking at Shopzilla's main site, you can see that in their mental model users are inclined to type out what they are searching for. Like the previous two, this search bar is geared towards the users that have a specific agenda in mind when they are shopping. Although it serves the same purpose as Amazon's and eBay's search does, Shopzilla's search does not auto-complete like the others.
 
-\subsubsection{Satisfaction}
-Amazon approaches satisfaction in an incredibly reasonable fashion. Since their interface is learnable, efficient (for the most part), error free, and memorable. It is no suprise that Amazon's satisfaction is high.
+	For the customers that are looking to browse for a product, they are presented with a table of categories under the search bar. These simply show what the top categories are for any given time. This feature is awesome because it can show what the most popular items are at a specific time, yet it does fall short in some sense. As opposed to Amazon and eBay, a shopper can't really have a history for Shopzilla to work with. So the idea of keeping track of what users might like doesn't really play out like it would for Amazon or eBay. There is no \textit{my} Shopzilla.
 
+	Between the search bar and main categories that Shopzilla has on their page, they adequately bridge the gap between the designer's mental model and the user's model. For the purpose of their site, they have completed the bridge between the two in a relatively strong fashion. If Shopzilla was keeping data of specific users in order to personalize a shopping experience, then their current site would not address the gap between mental models well. But since they do not, the connection they have created fares well for how simple it is.
 
-\subsection{Interaction Style}
-Amazon has chosen to mainly use the overall interaction style of Menus, Forms, and Dialogs. Form this style, Amazon employs Pull-Down Menus and.
+	Shopzilla does not really address the third type of user is the same way that the other two do. Yes, shoppers can re-search for a product they were thinking about. But, they do not provide options for remembering what they were exactly looking for earlier.
 
+\section{Five key usability metrics}
 
-\pagebreak
+	\subsection{Learnability}
 
+		\subsubsection{Amazon's learnability}
+		In terms of the shopping process, Amazon's site is designed well because it takes little to no time at all to learn how to navigate and use it. The layout remains consistent throughout the every step of the way. As I mentioned previously, their website appeals to all types of customers which makes it very learnable. Through out every step of the way, the action required to get to the next step of the process is always on the right of the web page. The shopping process is very learnable.
 
+		Yet, Amazon's account page takes some more time to learn. They include many links of just text and options that most common shoppers do not use like \textit{Manage Bulk Gift Card Orders} and \textit{Manage Textbook Rentals}. It takes time to simply get familiar with the layout.
 
-\section{eBay}
+		All in all, their interface is fairly learnable and takes not too much time to learn.
 
-\subsection{Mental model}
+		\subsubsection{eBay's Learnability}
+		eBay's learnability is fairly high looking at our test results. It does not take a long time for a customer to learn how to navigate and utilize their site. Shopping for products is straightforward enough. It might be less straightforward than Amazon. But in contrast, their account modification and viewing pages are laid out in a way that allows for a slightly more learnable experience than Amazon.
 
-eBay's mental models have many similarities to Amazon. Just like Amazon, their goal is to approach every type of customer that can navigate their website.
+		\subsubsection{Shopzilla's Learnability}
+		In terms of learnability, Shopzilla's interface is quite simple and doesn't require much time to learn how to use their site. This is where Shopzilla excels compared to the other two shopping sites. Since they are a site that simply aggregates products, all they have to focus on is content presentation. They do not need to worry about shopping carts, account pages, etc. Simplicity makes their site extremely learnable.
 
-The \textbf{search bar} is there if the customer has a specific agenda on their mind when they arrive at eBay. An autocompleting search bar allows the site to guess what the user wants to buy. Its purpose is clear and it fulfills its purpose quite nicely.
+	\subsection{Efficiency}
 
-eBay utilizes a similar concept as Amazon's horizontal lists. They also have lists as one navigates their main site further down, but these lists are created by users of the website. Examples include \textit{Namaste}, a list including all types of yoga products, \textit{Mellow Yellow}, a list geared towards yellow products, and \textit{Je T'aime... Moi Non Plus}, a Jane Birkin inspired list. These are geared for the people on eBay's site that are simply browsing with no clear intention of what they might want to buy. eBay also includes \textit{My Feed} for personal reccomendations for new products. These options clearly interact well with user's whose mental models are geared towards having eBay help them decide what they want to purchase.
+		\subsubsection{Amazon's efficiency}
+		Amazon's checkout process is quite efficient.. In order to buy a product, Amazon offers a few options for completing a purchase for its customers. 
 
-eBay realizes the power of simple interfaces. At the bottom of the page, they include a link to \textit{Legal \& More}. This section pops up with a ton of options that they deem to be less used, like \textit{Security center}, \textit{Business sellers}, etc. They are keeping more content that the user is inclinded to use in their experence right where they need it.. Most of the clicks that a user can take keeo them on the same page. For example, whenever you click on your name at the top of the page, a drop-down comes down with some options like \textit{Purchases} and \textit{Recently Viewed}. Amazon accomplishes the same with more dropdowns and more options for each drop-down. They include many options that the user simply wouldn't use. This simplification of what the user needs to access their account option is a move that really faciliates communication between the designer's mental model and the user's mental model.
+		First, they allow the customer to add their product to their shopping cart. This process is efficient because, as mentioned previously, each subsequent step is always located in the same area. The user is guided through couple of steps, and at each part of the way they are guided, quite masterfully, into what they need to do to do the next step.
 
-Overall, eBay's site approacches all types of mental models well and does so in a simplistic fashion.
+		Second, they also allow customers to buy with 1-Click\textregistered\hspace{2 mm}(I didn't want them to get mad). This is quite incredibly efficient. It holds true to its name and really allows for a single click to purchase a product. Before clicking buy, it allows for the user to choose which address they ship to from that are of the screen.
 
-\subsection{Five key usability metrics}
-\subsubsection{Learnability}
-eBay's learnability is fairly high looking at our test results. It does not take a long time for a customer to learn how to navigate and utilize their site. Shopping for products is straightfoward enough. It might be less straightforward than Amazon. But in contrast, their account modofication and viewing pages are laid out in a way that allows for a much more learnable experience than Amazon, per say. 
+		Overall, the whole process of using their website is efficient.
 
-\subsubsection{Efficiency}
+		\subsubsection{eBay's efficiency}
 
-eBay is quite efficient. In terms of the checkout process, they include a way to purchase items called \textit{Buy it now}, something a la Amazon's 1-Click\textregistered.
+		eBay is quite efficient. In terms of the checkout process, they include a way to purchase items called \textit{Buy it now}, something a la Amazon's 1-Click\textregistered. Like Amazon, they include two different ways of checking out with their purchase. Both ways are efficient and only use the minimum amount of steps/page visits to accomplish said task. 
 
-\subsubsection{Errors}
-eBay's rate of errors is 
+		\subsubsection{Shopzilla's efficiency}
+		Shopzilla's efficiency is also quite high due to their site's simplicity. Once a user familiarizes themselves with Shopzilla's website, the act of being inefficient and the probability of inefficiency is quite low. When it came to list filtering, Shopzilla tore the competition down. Amazon and eBay did not really compare when it came to how efficient Shopzilla was in this task. Overall, Shopzilla is efficient in every way.
 
-\subsubsection{Memorability}
+	\subsection{Errors}
 
-\subsubsection{Satisfaction}
-eBay trades off satisfaction for efficiency. Although they are more efficient when it comes to adding a credit card to an account, overall, users were less thrilled with the experience.
+		\subsubsection{Amazon's errors}
+		A potential error that may arise during shopping using the 1-Click\textregistered\hspace{2 mm}method, is that each location saved in a user's account can have a default payment method. If a user forgets which payment method they have chosen for a given location to ship to, this can charge a different payment method than they might have expected. 
 
-\subsection{Interaction Style}
+		Another area where errors could arise are on the account page due to its overall uneasiness to learn.  Users may look for an option in area that that option is not even present in. Besides these two things, their website is (for the most part) error-free.
 
+		\subsubsection{eBay's errors}
+		eBay's rate of errors is on the same level of Amazon's. There isn't much to fudge up on. Since their account page is organized in a more efficient manner, their rate of errors goes down. Overall, eBay is (for the most part) error-free.
 
-\pagebreak
+		\subsubsection{Shopzilla's errors}
+		Shopzilla's site offers no room for real errors. The rate of errors is quite low. For example, in the test of narrowing down a product simply by using list filtering, Shopzilla dominated the test. They have their site running nearly error-free.
 
-\section{Shopzilla}
+	\subsection{Memorability}
 
-\subsection{Mental model}
+		\subsubsection{Amazon's memorability}		
+		In terms of memorability, Amazon's site utilizes the idea of keeping the link or button that completes an action on the right side of the page. This make it memorable because any user can expect to see similar actions on that side fo the page. Overall, Amazon's site is memorable.
 
-Looking at Shopzilla's main site, you can see that in their mental model users are inclined to type out what they are searching for. Like the previous two, this search bar is geared towards the users that have a specific agenda in mind when they are shopping. Although it serves the same purpose as Amazon's and eBay's search does, Shopzilla's search does not auto-complete like the others.
+		\subsubsection{eBay's memorability}
+		Overall, eBay's site is quite memorable (in an interaction design sense, oh silly you). Over time, retaining how to use their site over time would see no real issues.
 
-For the customers that are looking to browse for a product, they are presented with a table of categories under the search bar. These simply show what the top categories are for any given time. This feature is awesome because it can show what the most popular items are at a specific time, yet it does fall short in some sense. As opposed to Amazon and eBay, a shopper can't really have a history for Shopzilla to work with. So the idea of keeping track of what users might like doesn't really play out like it would for Amazon or eBay. There is no \textit{my} Shopzilla.
-
-Bewtween the search bar and main categories that Shopzilla has on their page, they adequately bridge the gap between the designer's mental model and the user's model. For the purpose of their site, they have completed the bridge between the two in a relatively strong fashion. If Shopzilla was keeping data of specific users in order to personalize a shopping experience, then their current site would not adress the gap between mental models well. But since they do not, the connection they have created fares well for how simple it is.
-
-Shopzilla does not really address the third type of user is the same way that the other two do. Yes, shoppers can re-seach for a product they were thinking about. But, they do not provide options for remembering what they were exactly looking for earlier. This is where Amazon's \textit{Wish lists} and eBay's \textit{Lists} come into play.
-
-\subsection{Five key usability metrics}
-\subsubsection{Learnability}
-In terms of learnability, Shopzilla's interface is quite simple and doesn't require much time to learn how to use their site. This is where Shopzilla excels compared to the other two shopping sites. Since they are a site that simply aggregates products, all they have to focus on is content presentation. 
-
-\subsubsection{Efficiency}
-Shopzilla's efficiency is also quite high due to their site's simplicity. Once a user familiarizes themselves with Shopzilla's website, the act of being inefficient and the probability of ineffieciency is quite low. When it came to list filtering, Shopzilla tore the competition down because they 
-
-\subsubsection{Errors}
-Shozilla's site offers no room for real errors. The rate of errors is quite low. For example, in the test of narrowing down a product simply by using list filtering, Shopzilla dominated the test. 
+		\subsubsection{Shopzilla's memorability}
+		Shopzilla's memorability is fairly high due to the sites simplicity. Is a user were to come back to Shopzilla's site and use it again after quite some time, there is nothing on their site to cause any issues with memorability. The site is organized in a way that most users would have no problem remembering.
 
 
-\subsubsection{Memorability}
-Shopzilla's memorability is fairly high due to the sites simplicity. Is a user were to come back to Shopzilla's site and use it again after uite some time, there is nothing on their site to cause any issues with memorability. 
+	\subsection{Satisfaction}
+
+		\subsubsection{Amazon's satisfaction}
+		Amazon approaches satisfaction in an incredibly reasonable fashion. Since their interface is learnable, efficient (for the most part), error free, and memorable. It is no surprise that Amazon's satisfaction is high.
+
+		\subsubsection{eBay's satisfaction}
+		eBay trades off satisfaction for efficiency. Although they are more efficient when it comes to adding a credit card to an account, overall, users were less thrilled with the experience.
+
+		\subsubsection{Shopzilla's satisfaction}
+		In terms of subjective satisfaction, Shopzilla fares slightly less than the other two. Since we still live in a world where \textit{flashy} and \textit{glamorous} products prevail, it is not surprising that Shopzilla's relative satisfaction is less than our other two competitors.
 
 
-\subsubsection{Satisfaction}
-In terms of subjective satisfaction, Shopzilla fares slighlt less than the other two. Since we still live in a world where \textit{flashy} and \textit{glamourus} products prevail, it is not surprigsing that Shopzilla's relative satisfaction is less than our other two competitors.
+\section{Interaction Style}
 
-\subsection{Interaction Style}
+	All three shopping sites have chosen to utitlize the interaction style of menus, forms, and dialoags.
 
-\pagebreak
+	Amazon prefers to organize their dropdowns and menus in terms of their task. On their account page, they cluster the menu items into \textit{Orders}, \textit{Payment}, \textit{Settings}, \textit{Digital Content}, and \textit{Personalization}. By doing this they bunch up these items just like a user would. This organization of actions is very effective for any novice user and for users unfamiliar with Amazon's task terminology. By seeing the main categories presented to them, customers with no experience with the site should have no problem with navigating such territory. (I am saying that the overall layout and presentation of their options is done well, I still contend that the content in which those menus link to could be organized more efficiently.) Amazon also uses a consistent grammatical style which allows for consistency across all pages.
+
+	eBay's site works well because they use positional consistency for their menu items. Whenever you view a new page, you can expect to see the menu in the exact same place as it was before. eBay utilizes familiar and consistent terms and concise phrasing which allow for easy navigation and no prolems for accomplishing tasks.
+
+	Not surprisingly, Shopzilla, too, has also chosen to mainly use the interaction style of menus, forms, and dialogs. They have less menus, forms, and dialogs to make since they don't do all of the things previously mentioned. Even thoughforms are mainly geared towards imitataing real-life forms, Shopzilla still uses a simplified version of the form interaction style for their search bar. This style simplifies data entry
+
+	Overall, the idea of using menus, forms, and dialogs for shopping sites makes sense. Menus help customers narrow down categories of products, search for any given product they want to look for, and other similar actions. All in all, for the use through a web browser, the choice of this interaction style was key.  
 
 \section{Summary}
 
-\subsection{Mental models}
-
-\subsection{Five key usability metrics}
-
-As an overall theme, a site's simplicity was very related to the way each performed in the usability metrics and how the designer and user communicated through their respective mental models.
-
-Shopzilla's site's simplicity is very important for all of its usuability metrics and the way in which it utilizes its mental models. Shopzilla has a clear want for efficiency when their users use their site.
-
-\subsection{Interaction Style}
-
-
-
+	Even though Amazon, eBay, and Shopzilla all mainly use the same interaction style, the way the implement that style affects how their designer's mental models are perceived and how the five key usabilty metrics fare for each shopping site. Their mental models change due to the kinds of customers they are providing services for. They each fare differently in the five key usabilty metrics since they each try to tailor their experience to any given customer.
 
 \end{document}
