added skeleton for the paper, testing using packages applekeys and menukeys

--- a/dream-design/word-processor-dream-design.tex
+++ b/dream-design/word-processor-dream-design.tex
@@ -1,9 +1,11 @@
 \documentclass[11pt, oneside]{article}   
 \usepackage{geometry}                	
 \geometry{letterpaper}                   	
-\usepackage{graphicx}			
-							
+\usepackage{graphicx}		
 \usepackage{amssymb}
+\usepackage{applekeys}
+\usepackage{menukeys}
+
 
 \title{Dream Design of a Word Processor}
 \author{Andrew Kowalczyk}
@@ -11,5 +13,27 @@
 
 \begin{document}
 \maketitle
+The word processor.
+
+\section{Design}
+
+The design would mainly use audio recording from the user for all main actions.
+
+One button or key on the computer would denote the act of recording voice for text input. Perhaps 
+
+
+\section{Usage Scenarios}
+
+\section{Rationale}
+
+\subsection{Priorities}
+\subsection{Mental Models}
+\subsection{Interaction design concepts, guidelines, principles, and theories}
+
+\cmdkey
+
+\menu{Hello > What's > Up}
+
+\section{Usability metric forcast}
 
 \end{document}
