--- a/dream-design/text-editor-dream-design.tex
+++ b/dream-design/text-editor-dream-design.tex
@@ -4,25 +4,90 @@
 \usepackage{graphicx}		
 \usepackage{amssymb}
 \usepackage{applekeys}
+\usepackage[T1]{fontenc}
 \usepackage{menukeys}
+\usepackage{enumitem}
+\usepackage{chngpage}
 
 
-\title{Dream Design of a Word Processor}
+\title{Dream Design of a Text Editor}
 \author{Andrew Kowalczyk}
 \date{December 06, 2013}						
 
 \begin{document}
 \maketitle
-The word processor.
+
 
 \section{Design}
+Text editors are some of the most important pieces of software that programmers can use for thier craft. I think a redesign of this application using multiple interaction styles would be incredibly beneficial for a coder/programmer.
 
-The design would mainly use audio recording from the user for all main actions.
+The design would mainly use audio recording from the user for all main actions. The ability to type in the editor is always a possibility, but when the user simply gets tired of doing that they can revert to their spoken voice for accomplishing their goal.
 
-One button or key on the computer would denote the act of recording voice for text input. Perhaps 
+Certain key combinations would denote certain types of actions. Whenever a user will hold the key combination, the application would wait for some kind of input and only after the user lets go of the keys will the application respond.
+
+\subsection{Record code/text}
+\keys{\Alt + R} This would allow the user to record any text they want to have written down. Certain words would be keywords, like \textit{for loop}, \textit{if}, \textit{section}, etc. would all have their overall syntax saved for any particular syntax of a file. So for example if a 
+
+\keys{\Alt + R + V} This denotes recording verbatim. This would tell the application to ignore keywords and to simply record whatever input the user has provided. This would allow for 
+
+\subsection{File actions}
+
+	\subsubsection{File syntax}
+	\keys{\Alt + Y}  This would allow the user to to change the syntax of the file. Sample input of the user includes: "Python", "C++", "\LaTeX", "Ruby on Rails", "JSON", etc.
+
+	\subsubsection{File encoding}
+	\keys{\ctrl + \Alt + E} The user could change the encoding of the file. Input from the user can be: "UTF-8", "UTF-16 Little Endian", etc.
+
+
+	\subsubsection{File actions}
+	\keys{\Alt + F} Complete a specific file action. Input ranges from: "save", "save as", "new file", "open most recent", "open last closed file", "close window", "new window", etc.
+
+
+
+\subsection{Text and cursor manipulation}
+
+	\subsection{Cursor}
+
+	\subsubsection{Selecting text}
+	\keys{\Alt + S} Select a certain part of the text. "word" "line" "paragraph" "scope"
+
+	\subsubsection{Text style for \LaTeX}
+	\keys{\Alt + S + T} If a user is perparing a document using \LaTeX, this would allow them to change specifc style of text.
+
+	\subsubsection{Expanding selection}
+	\keys{\Alt + E} Once a user has selected their text, they can expand their selection in a number of ways.
+
+	\subsubsection{Selection manipulation}
+	\keys{\Alt + M} Once a user has selected their text, they can manipulate it in several ways. Input includes: "put into if statment", "",  
+
+	\subsubsection{Line number}
+	\keys{\Alt + L} Go a certain line number. Sample input includes: "fifty-three", "first", "last", "two", etc.
+
+	\subsubsection{Moving text}
+	\keys{\Alt + M} Once a pience of text is selected, the user can move the text as the please. Sample input that the user can provide: "up one line", "to the top", "move into XXX method"
+
+	\subsubsection{Deleting Text}
+	\keys{\Alt + D} Delete a certain part of the text. Input from the user includes: "word", "line", "paragraph", "scope", etc.
+
+\subsection{Scolling}
+\keys{\Alt + A} The user would be able to scroll depending on their input: Sample input includes: "up", "down", "top", and "bottom". The speed at which the text is scrolled at could be changed in the settings.
+
+\subsection{Preferences}
+\keys{\Alt + P} The user would be able to scroll depending on their input: Sample input includes: "up", "down", "top", and "bottom". The speed at which the text is scrolled at could be changed in the settings.
+
+\subsection{User defined commands}
+
 
 
 \section{Usage Scenarios}
+
+\subsection{Handicapped persons}
+
+The first user group that comes to mind are people who normally have some difficulty typing. Due to some physical barriers, they might be unable to input or manipulate text via the keyboard. This application would allow for those people who want to code, to be able to do so.
+
+\subsection{The tired coder}
+
+The second user group that comes to mind is the coder who is simply just tired of typing.
 
 \section{Rationale}
 
@@ -30,10 +95,22 @@ One button or key on the computer would denote the act of recording voice for te
 \subsection{Mental Models}
 \subsection{Interaction design concepts, guidelines, principles, and theories}
 
-\cmdkey
 
 \menu{Hello > What's > Up}
 
-\section{Usability metric forcast}
+\section{Usability metric forecast}
+
+\subsection{Learnability}
+The overall learnability of the application would not be the fastest. Learning a new set of key commands is never a quick thing to lean. Also learning new phrases for certain actions for users could take a while.
+\subsection{Efficiency}
+
+\subsection{Errors}
+
+\subsection{Memorability}
+In terms of memorability, the application would fare well. The same commands would do that same things and revisiting this application after some time would not take long to remeber how the application functions. Refamiliarizing onesef with the application would be straightforward.
+
+\subsection{Satisfaction}
+Not surprisingly, this metric is largely subjective. For people who previously had a hard time coding due to a disability, this would induce large amounts of satisfaction. For people who do not have any physical diabilities impeding them from typing, teir satisfaction would rely upon how effiecient they have become at using the application. The overall learning process could be
 
 \end{document}
+	
